--- a/kalkulator/calculator.html
+++ b/kalkulator/calculator.html
@@ -5,7 +5,6 @@
    <title>Web Calculator</title>
    <link rel="stylesheet" href="assets/style1.css">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
 </head>
  
 <body>
@@ -37,6 +36,21 @@
            <div class="button equals double">=</div>
        </div>
    </div>
+   <div class="history card">
+       <h2>Riwayat Perhitungan</h2>
+       <table>
+           <thead>
+               <tr>
+                   <th>Angka Pertama</th>
+                   <th>Operator</th>
+                   <th>Angka Kedua</th>
+                   <th>Hasil</th>
+               </tr>
+           </thead>
+           <tbody id="historyList"></tbody>
+       </table>
+   </div>
+ 
    <script src="assets/kalkulator.js"></script>
 </body>
  
